ADD_LIBRARY(myKalman2 STATIC
    myKalman.h
  	myKalman.cpp
)

SET_TARGET_PROPERTIES(myKalman2 PROPERTIES OUTPUT_NAME myKalman2)

ADD_DEPENDENCIES(myKalman2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})  

TARGET_LINK_LIBRARIES(myKalman2
    ${catkin_LIBRARIES}
	# csparse
)

# INSTALL(TARGETS localization
#   RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
#   LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
#   ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
# )

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

# INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/g2o/types/sba)
